[gd_scene load_steps=7 format=3 uid="uid://d1erof7tjq72d"]

[ext_resource type="Texture2D" uid="uid://drvoi5675p3i5" path="res://assets/flappy-bird-assets/sprites/pipe-green.png" id="1_3q42g"]
[ext_resource type="Script" path="res://scripts/actor/obstactle.gd" id="1_oei5j"]
[ext_resource type="Texture2D" uid="uid://dyldqjdp7r683" path="res://assets/flappy-bird-assets/sprites/pipe-red.png" id="2_0u0ti"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ciyms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0u0ti")
}],
"loop": true,
"name": &"Dark",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3q42g")
}],
"loop": true,
"name": &"Light",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tge4h"]
size = Vector2(52, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwlrr"]
size = Vector2(52, 640)

[node name="Obstacle" type="Area2D"]
collision_layer = 3
script = ExtResource("1_oei5j")

[node name="TextureBottom" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 225)
sprite_frames = SubResource("SpriteFrames_ciyms")
animation = &"Dark"
autoplay = "Light"

[node name="TextureBottomExtn" type="AnimatedSprite2D" parent="TextureBottom"]
position = Vector2(0, 320)
rotation = 3.14159
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_ciyms")
animation = &"Dark"
autoplay = "Light"

[node name="TextureTop" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -225)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_ciyms")
animation = &"Dark"
autoplay = "Light"

[node name="TextureTopExtn" type="AnimatedSprite2D" parent="TextureTop"]
position = Vector2(0, 320)
rotation = 3.14159
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_ciyms")
animation = &"Dark"
autoplay = "Light"

[node name="TopCollision" type="CollisionShape2D" parent="."]
position = Vector2(2.91038e-11, -385)
shape = SubResource("RectangleShape2D_tge4h")

[node name="BottomCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 385)
shape = SubResource("RectangleShape2D_iwlrr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
